--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,14 @@
     "dev": "vue-cli-service serve --open"
   },
   "dependencies": {
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "axios": "^1.5.0",
-    "element-plus": "^2.4.1",
     "@element-plus/icons-vue": "^2.1.0",
-    "vue-json-pretty": "^2.2.4",
+    "axios": "^1.5.0",
     "dayjs": "^1.11.9",
-    "nprogress": "^0.2.0"
+    "element-plus": "^2.4.1",
+    "nprogress": "^0.2.0",
+    "vue": "^3.3.4",
+    "vue-json-pretty": "^2.2.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vue/cli-service": "^5.0.8",
